src/home.css
@import "tailwindcss";
@import "tw-animate-css";
@layer utilities {
    .feature_card {
        @apply flex flex-col items-center max-w-[70%] relative w-[70vw] md:w-[50vw] xl:w-[25vw] h-100 hover:-translate-y-0.5 overflow-hidden;
    }

    .feature_card img {
        @apply absolute h-full w-full object-cover z-0;
    }

    .feature_card .feature_card_description {
        @apply z-1  flex flex-col justify-end bg-(--overlay) h-full w-full p-2 md:p-8 group-hover:backdrop-blur-md;
    }

    .feature_card h3 {
        @apply text-white translate-y-6.25 group-hover:translate-y-0;
    }

    .feature_card p {
        @apply text-gray-300 translate-y-6.25 opacity-0 group-hover:opacity-100 group-hover:translate-y-0;
    }

    .feature_card a {
        @apply z-2 absolute h-full w-full object-cover;
    }

    .last_result_widget {
        @apply fixed bottom-0 left-0 rounded-tr-lg bg-(--surface-2) border-(--border-gray-200) shadow-md flex justify-center items-center p-3 gap-4 cursor-pointer;
    }

    .last_result_widget button {
        @apply p-0
    }

    .full_last_result {
        @apply flex-col items-center justify-center fixed top-[50%] left-[50%] z-20 translate-[-50%] bg-(--surface-2) border-(--border) shadow-lg  p-5 text-center gap-4 hidden;
    }

    .result_meta {
        @apply flex flex-col gap-1
    }

    .result_breakdown h4 {
        @apply mb-1 font-bold leading-tight text-xl;
    }

    .result_breakdown li {
        @apply mb-2 rounded-sm border-gray-500 border p-2;
    }

    .result_breakdown li.correct {
        @apply bg-(--correct)
    }

    .result_breakdown li.incorrect {
        @apply bg-(--incorrect)
    }
}

